# github-secretor

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: app.py  create_secrets.py  parse_ini.py
src/cli/: __init__.py  cli.py  help_text.json  printing.py  repos_cli.py  schemas.py  validations.py
src/secretor/: __init__.py  exceptions.py  secretor.py
src/utils/: utils.py
tests/: context.py  test_helps.py
