[tool.poetry]
name = "github-secretor"
version = "0.1.0"
description = "A CLI tool to manage Github Secrets."
authors = ["plusiv"]
license = "MIT"
readme = "README.md"
packages = [{include = "github_secretor"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
typer = {extras = ["all"], version = "^0.7.0"}
pynacl = "^1.5.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
